syntax = "proto3";

package io.restorecommerce.meta;

import "io/restorecommerce/attribute.proto";

// meta properties common to all resources

message Meta {
    optional double created = 1; // timestamp
    optional double modified = 2; // timestamp
    optional string modified_by = 3; // ID from last User who modified it
    repeated io.restorecommerce.attribute.Attribute owners = 4;
    repeated io.restorecommerce.attribute.AttributeObj acls = 5;
}