syntax = "proto3";

package io.restorecommerce.order;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/types.proto";

service Service {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (OrderListResponse);
  rpc Create (OrderList) returns (OrderListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (OrderList) returns (OrderListResponse);
  rpc Upsert (OrderList) returns (OrderListResponse);
  rpc TriggerFulfillment (OrderDataList) returns (TriggerFulfillmentResponse);
}


message OrderList {
  repeated Order items = 1;
  uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message OrderListResponse {
  repeated OrderResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message OrderResponse {
  Order payload = 1;
  io.restorecommerce.status.Status status = 2;
}

/**
* Fulfillment Items list
*/
message FulfilledItems {
  string item_id = 1;
  uint32 quantity = 2;
}

/**
* To be updated on Order once the TriggerFulfillment is called
*/
message Fulfillments {
  string id = 1;
  repeated FulfilledItems items = 2;
}

message Order {
  string id = 1;
  io.restorecommerce.meta.Meta meta = 2;
  string name = 3;
  string description = 4;
  string status = 5;
  repeated Items items = 6;
  // sum of all the quantity_price will be total_price
  double total_price = 7;
  // shipping address
  string shipping_contact_point_id = 8;
  string billing_contact_point_id = 9;
  double total_weight_in_kg = 10;
  string fulfillment_product_id = 11; // will be selected on order checkout
  repeated Fulfillments fulfillments = 12; // will be updated after triggering fulfillment
}

message Items {
  double quantity_price = 1;  //  (quantity * price) +  ( vat * (quantity * price) )
  Item item = 2;
}

message Item {
  // below identifier is id of variant or bundle
  string variant_bundle_id = 1;
  string product_name = 2;
  string product_description = 3;
  string manufacturer_name = 4;
  string manufacturer_description = 5;
  string prototype_name = 6;
  string prototype_description = 7;
  int32 quantity = 8;
  int32 vat_amount = 9;
  io.restorecommerce.product.Price price = 10;
  string item_type = 11;
  double taric_code = 12;
  string stock_keeping_unit = 13;
  io.restorecommerce.types.FloatWithUnit weight = 14;
  io.restorecommerce.types.FloatWithUnit length = 15;
  io.restorecommerce.types.FloatWithUnit width = 16;
  io.restorecommerce.types.FloatWithUnit height = 17;
}

message Deleted {
  string id = 1;
}

message OrderDataList {
  repeated OrderData order_data = 1;
  io.restorecommerce.auth.Subject subject = 3;
}

message OrderData {
  string order_id = 1;
  repeated ItemQuantity items = 2;
}

message ItemQuantity {
  string item_id = 1;
  int32 quantity = 2;
}

message TriggerFulfillmentResponse {
  repeated io.restorecommerce.status.Status status = 1;
  io.restorecommerce.status.OperationStatus operation_status = 2;
}